Firmware/V1/spider_main/build/log/idf_py_stdout_output_38715
[1/11] Performing build step for 'bootloader'
[1/1] cd /Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/build/bootloader/esp-idf/esptool_py && /Users/naichenzhao/.espressif/python_env/idf5.3_py3.11_env/bin/python /Users/naichenzhao/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/build/bootloader/bootloader.bin
Bootloader binary size 0x5430 bytes. 0x2bd0 bytes (34%) free.
[2/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/motor.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/motor.c.obj 
/Users/naichenzhao/.espressif/tools/riscv32-esp-elf/esp-13.2.0_20230928/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dev-1043-g8c9e29898f-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/build/config -I/Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/main -I/Users/naichenzhao/esp/esp-idf/components/newlib/platform_include -I/Users/naichenzhao/esp/esp-idf/components/freertos/config/include -I/Users/naichenzhao/esp/esp-idf/components/freertos/config/include/freertos -I/Users/naichenzhao/esp/esp-idf/components/freertos/config/riscv/include -I/Users/naichenzhao/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/naichenzhao/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/Users/naichenzhao/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/Users/naichenzhao/esp/esp-idf/components/freertos/esp_additions/include -I/Users/naichenzhao/esp/esp-idf/components/esp_hw_support/include -I/Users/naichenzhao/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/naichenzhao/esp/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/Users/naichenzhao/esp/esp-idf/components/esp_hw_support/port/esp32c6/. -I/Users/naichenzhao/esp/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/Users/naichenzhao/esp/esp-idf/components/heap/include -I/Users/naichenzhao/esp/esp-idf/components/log/include -I/Users/naichenzhao/esp/esp-idf/components/soc/include -I/Users/naichenzhao/esp/esp-idf/components/soc/esp32c6 -I/Users/naichenzhao/esp/esp-idf/components/soc/esp32c6/include -I/Users/naichenzhao/esp/esp-idf/components/hal/platform_port/include -I/Users/naichenzhao/esp/esp-idf/components/hal/esp32c6/include -I/Users/naichenzhao/esp/esp-idf/components/hal/include -I/Users/naichenzhao/esp/esp-idf/components/esp_rom/include -I/Users/naichenzhao/esp/esp-idf/components/esp_rom/include/esp32c6 -I/Users/naichenzhao/esp/esp-idf/components/esp_rom/esp32c6 -I/Users/naichenzhao/esp/esp-idf/components/esp_common/include -I/Users/naichenzhao/esp/esp-idf/components/esp_system/include -I/Users/naichenzhao/esp/esp-idf/components/esp_system/port/soc -I/Users/naichenzhao/esp/esp-idf/components/esp_system/port/include/riscv -I/Users/naichenzhao/esp/esp-idf/components/esp_system/port/include/private -I/Users/naichenzhao/esp/esp-idf/components/riscv/include -I/Users/naichenzhao/esp/esp-idf/components/lwip/include -I/Users/naichenzhao/esp/esp-idf/components/lwip/include/apps -I/Users/naichenzhao/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/naichenzhao/esp/esp-idf/components/lwip/lwip/src/include -I/Users/naichenzhao/esp/esp-idf/components/lwip/port/include -I/Users/naichenzhao/esp/esp-idf/components/lwip/port/freertos/include -I/Users/naichenzhao/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/naichenzhao/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/naichenzhao/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/components/rotary_encoder/include -I/Users/naichenzhao/esp/esp-idf/components/driver/deprecated -I/Users/naichenzhao/esp/esp-idf/components/driver/i2c/include -I/Users/naichenzhao/esp/esp-idf/components/driver/ledc/include -I/Users/naichenzhao/esp/esp-idf/components/driver/parlio/include -I/Users/naichenzhao/esp/esp-idf/components/driver/touch_sensor/include -I/Users/naichenzhao/esp/esp-idf/components/driver/twai/include -I/Users/naichenzhao/esp/esp-idf/components/driver/usb_serial_jtag/include -I/Users/naichenzhao/esp/esp-idf/components/esp_pm/include -I/Users/naichenzhao/esp/esp-idf/components/esp_ringbuf/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_gpio/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_pcnt/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_gptimer/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_spi/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_mcpwm/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_i2s/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_sdmmc/include -I/Users/naichenzhao/esp/esp-idf/components/sdmmc/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_sdspi/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_sdio/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_dac/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_rmt/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_tsens/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_sdm/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_i2c/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_uart/include -I/Users/naichenzhao/esp/esp-idf/components/vfs/include -I/Users/naichenzhao/esp/esp-idf/components/esp_timer/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main=. -fmacro-prefix-map=/Users/naichenzhao/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/motor.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/motor.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/motor.c.obj -c /Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/main/motor.c
/Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/main/motor.c: In function 'move_pos':
/Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/main/motor.c:115:26: error: implicit declaration of function 'esp_timer_get_time' [-Werror=implicit-function-declaration]
  115 |     uint64_t curr_time = esp_timer_get_time();
      |                          ^~~~~~~~~~~~~~~~~~
/Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/main/motor.c: In function 'goto_pos':
/Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/main/motor.c:135:34: error: expected ';' before 'uint8_t'
  135 |     motor_positions[num] = target
      |                                  ^
      |                                  ;
  136 |     uint8_t current = get_angle(num);
      |     ~~~~~~~                       
/Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/main/motor.c:137:35: error: 'current' undeclared (first use in this function)
  137 |     while (motor_positions[num] - current != 0) {
      |                                   ^~~~~~~
/Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/main/motor.c:137:35: note: each undeclared identifier is reported only once for each function it appears in
/Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/main/motor.c:140:9: error: implicit declaration of function 'vTaskDelay' [-Werror=implicit-function-declaration]
  140 |         vTaskDelay(10 / portTICK_PERIOD_MS);
      |         ^~~~~~~~~~
/Users/naichenzhao/Desktop/SLICE/SLICE-Spider/Firmware/V1/spider_main/main/motor.c:140:25: error: 'portTICK_PERIOD_MS' undeclared (first use in this function)
  140 |         vTaskDelay(10 / portTICK_PERIOD_MS);
      |                         ^~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
[3/11] No install step for 'bootloader'
[4/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
ninja: build stopped: subcommand failed.
